--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "asoulcnkioauthfrontend",
+  "name": "asoulcnki-oauth-frontend",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -12,6 +12,9 @@
     "windicss": "^3.2.0"
   },
   "dependencies": {
-    "js-cookie": "^3.0.1"
+    "axios": "^0.24.0",
+    "clipboard": "^2.0.8",
+    "js-cookie": "^3.0.1",
+    "qs": "^6.10.1"
   }
 }
