--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.24.0",
     "clipboard": "^2.0.8",
     "js-cookie": "^3.0.1",
-    "qs": "^6.10.1"
+    "qs": "^6.10.1",
+    "toastify-js": "^1.11.2"
   }
 }
