--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "clipboard": "^2.0.8",
+    "debounce": "^1.2.1",
     "js-cookie": "^3.0.1",
     "qs": "^6.10.1",
     "toastify-js": "^1.11.2"
