--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "devDependencies": {
     "vite": "^2.6.4",
+    "vite-plugin-pwa": "^0.11.8",
     "vite-plugin-windicss": "^1.4.12",
     "windicss": "^3.2.0"
   },
